# adtf_bufferconfig_to_mapfile_converter

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
source/app/: CMakeLists.txt  converter_application.cpp  xml_to_mapfile_converter.cpp
source/lib/: CMakeLists.txt  parser_lib.cpp  parser_lib.h  test_parser_lib.cpp  tree.xml
source/lib/test_files/: simple_input_file.xml  simple_output_file.xml
test/: CMakeLists.txt
test/files/: input_file.xml
test/parser_lib_test/: CMakeLists.txt  test_parser_lib.cpp
test/parser_lib_test/test_files/: simple_input_file.xml
